added disqus for comments system

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@ layout: default
         {% endfor %}
     </ul>
     </div>
-    
+
 </div>
+<script id="dsq-count-scr" src="//cnaa97.disqus.com/count.js" async></script>
