REMOVE i18n plugin, apply i18n only the CV page

--- a/_pages/cv-en.html
+++ b/_pages/cv-en.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: CV
-permalink: /cv
-lang: ko
+title: CV (en)
+permalink: /cv-en
+lang: en
 ---
 
 {% include cv-template.html %}
