--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 layout: default
 ---
 
-<div class="categories-wrapper">
-    {% include categories.html %}
+<div class="index-content">
+  <div class="index-content-col index-content-col-categories">
+    {% include container-categories.html lang="ko" %}
+  </div>
+  <div class="index-content-col index-content-col-recent">
+    {% include container-posts-recent.html lang="ko" %}
+  </div>
+</div>
+<div class="index-content">
+  {% include container-posts-all-by-category.html lang="ko" %}
 </div>
 
-<div class="main-post-wrapper">
-    {% include posts-pagination.html %}
-</div>
 
 {% if jekyll.environment == 'production' %}
-    <script id="dsq-count-scr" src="//cnaa97.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//cnaa97.disqus.com/count.js" async></script>
 {% endif %}
