apply pwa option

--- a/_pages/bear-todo.html
+++ b/_pages/bear-todo.html
@@ -11,7 +11,7 @@ permalink: /bear-todo
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bear Todo</title>
     <link rel="apple-touch-icon" href="http://cnaa97.github.io/public/img/bear-todo-icon.png">
-    <meta property="og:image" content="http://cnaa97.github.io/public/img/graph.png">
+    <link rel="manifest" href="http://cnaa97.github.io/public/other/manifest.webmanifest">
 </head>
 <body>
     <script>
