--- a/static/calendar.html
+++ b/static/calendar.html
@@ -222,5 +222,7 @@
       };
       generateCalendar(options);
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J0KBXN45J"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9J0KBXN45J');</script>
   </body>
 </html>
